--- a/source/less/plans-step.less
+++ b/source/less/plans-step.less
@@ -5,6 +5,10 @@
   padding: 24px 25px 23px 25px;
   box-sizing: border-box;
 
+  &--step2 {
+    padding-bottom: 4px;
+  }
+
   &:last-of-type {
     margin-bottom: 22px;
   }
