--- a/source/less/z-index.less
+++ b/source/less/z-index.less
@@ -11,6 +11,7 @@
 @service-info: 7;
 @business-rates-modal: 9;
 @main-nav-z: 10;
+@countries-block-z: 10;
 @profile-settings-z: 0;
 @plans-z: 1;
 @add-plans: 2;
