--- a/source/less/countries-block.less
+++ b/source/less/countries-block.less
@@ -2,7 +2,7 @@
   .zero-centered-modal(fixed);
   width: 220px;
   min-height: 563px;
-  z-index: 10;
+  z-index: @countries-block-z;
   top: 100px;
   background-color: @white;
 }
