--- a/source/less/calendar.less
+++ b/source/less/calendar.less
@@ -20,12 +20,11 @@
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
-  letter-spacing: 0em;
   color: @basic-blue-light;
   margin-bottom: 17px;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 12px;
     height: 12px;
@@ -38,7 +37,7 @@
   }
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     width: 12px;
     height: 12px;
@@ -56,7 +55,7 @@
   border-spacing: 0;
 }
 
-.calendar__head{
+.calendar__head {
   &::after {
     display: table-row;
     content: "";
@@ -105,5 +104,4 @@
     background-color: @basic-grey;
     color: @basic-blue-light;
   }
-
 }
