--- a/source/less/countries-block.less
+++ b/source/less/countries-block.less
@@ -35,7 +35,7 @@
   cursor: pointer;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     top: 4px;
     right: 2px;
@@ -45,7 +45,7 @@
   }
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     top: 4px;
     right: 2px;
