--- a/source/less/header.less
+++ b/source/less/header.less
@@ -3,7 +3,7 @@
   width: @mobile-width;
   margin: 0;
   padding: 19px 25px 52px 25px;
-  background-color: @dark-blue;
+  background-color: @darker-blue;
   box-sizing: border-box;
 }
 
