--- a/source/less/plans-step.less
+++ b/source/less/plans-step.less
@@ -23,7 +23,6 @@
   text-align: left;
   color: @basic-blue-light;
   margin-bottom: 16px;
-
 }
 
 .plans-step__description {
@@ -80,7 +79,7 @@
     width: 14px;
     position: absolute;
     bottom: 5px;
-    right: 0px;
+    right: 0;
     border: 1px solid @grey-white;
   }
 
@@ -88,7 +87,7 @@
     content: "";
     position: absolute;
     bottom: 5px;
-    right: 0px;
+    right: 0;
     width: 14px;
     border: 1px solid @grey-white;
     transform: rotate(90deg);
@@ -109,7 +108,7 @@
     width: 14px;
     position: absolute;
     bottom: 5px;
-    right: 0px;
+    right: 0;
     border: 1px solid @grey-white;
   }
 }
@@ -132,7 +131,7 @@
     width: 14px;
     position: absolute;
     bottom: 5px;
-    right: 0px;
+    right: 0;
     border: 1px solid @grey-white;
   }
 
@@ -140,7 +139,7 @@
     content: "";
     position: absolute;
     bottom: 5px;
-    right: 0px;
+    right: 0;
     width: 14px;
     border: 1px solid @grey-white;
     transform: rotate(90deg);
@@ -161,7 +160,7 @@
     width: 14px;
     position: absolute;
     bottom: 5px;
-    right: 0px;
+    right: 0;
     border: 1px solid @grey-white;
   }
 }
@@ -189,17 +188,17 @@
 }
 
 .plans-step__checkbox:checked + .plans-step__checkbox-description::after {
-  content: '';
+  content: "";
   position: absolute;
   width: 8px;
-	height: 4px;
-	background: transparent;
-	top: 6px;
-	left: 8px;
-	border: 2px solid @blue-basic;
-	border-top: none;
-	border-right: none;
-	transform: rotate(-45deg);
+  height: 4px;
+  background: transparent;
+  top: 6px;
+  left: 8px;
+  border: 2px solid @blue-basic;
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg);
 }
 
 .plans-step__some-step {
@@ -218,7 +217,6 @@
   font-style: normal;
   font-weight: 700;
   line-height: 30px;
-  letter-spacing: 0em;
   text-align: left;
   color: @basic-blue-light;
 
@@ -240,7 +238,7 @@
     content: "";
     position: absolute;
     right: 47px;
-    .make-circle(8px, @basic-blue-light)
+    .make-circle(8px, @basic-blue-light);
   }
 
   &::before {
@@ -255,13 +253,11 @@
     border-right: none;
     transform: rotate(-45deg);
   }
-
 }
 
 .plans-step__choose-country {
   width: 168px;
   height: 42px;
-  border: none;
   border: 1px solid @grey-solid;
   border-radius: 5px;
   padding-left: 10px;
@@ -285,5 +281,4 @@
   padding: 8px 7px 8px 7px;
   border: 1px solid @grey-solid;
   border-radius: 5px;
-
 }
