--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,77 +1,51 @@
-@import "normalize.less";
-@import "fonts.less";
-@import "colors.less";
-@import "var.less";
-@import "mixins.less";
-@import "z-index.less";
-@import "body.less";
-@import "header.less";
-@import "promo.less";
-@import "footer.less";
-@import "main-nav.less";
-@import "main.less";
-@import "authorization-link.less";
-@import "hamburger-button.less";
-@import "logo-and-btn.less";
-@import "section-title.less";
-@import "section-description.less";
-@import "section-content.less";
-@import "service-info.less";
-@import "countries.less";
-@import "country-descrition.less";
-@import "show-button.less";
-@import "users.less";
-@import "user-card.less";
-@import "mark-level.less";
-@import "business-rates.less";
-@import "business-rates-modal.less";
-@import "address.less";
-@import "map.less";
-@import "feedback.less";
-@import "phone-block.less";
-@import "mail-block.less";
-@import "social-list.less";
-@import "modal-window.less";
-@import "footer-form.less";
-@import "mark-level-form.less";
-@import "profile-settings.less";
-@import "form-page-btn.less";
-@import "tags.less";
-@import "transport.less";
-@import "plans.less";
-@import "plans-card.less";
-@import "add-plans.less";
-@import "plans-step.less";
-@import "calendar.less";
-@import "countries-block.less";
-@import "letters-table.less";
-@import "countries-list.less";
-
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-blockquote,
-cite {
-  margin: 0;
-  padding: 0;
-}
-
-button {
-  border: none;
-}
-
-.visually-hidden {
-  position: absolute;
-  clip: rect(0 0 0 0);
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-}
-
-.wrapper {
-  width: @wrapper-width;
-  margin: 0 auto;
-}
+@import "blocks/normalize.less";
+@import "blocks/fonts.less";
+@import "blocks/colors.less";
+@import "blocks/var.less";
+@import "blocks/mixins.less";
+@import "blocks/z-index.less";
+@import "blocks/body.less";
+@import "blocks/header.less";
+@import "blocks/promo.less";
+@import "blocks/footer.less";
+@import "blocks/main-nav.less";
+@import "blocks/main.less";
+@import "blocks/authorization-link.less";
+@import "blocks/hamburger-button.less";
+@import "blocks/logo-and-btn.less";
+@import "blocks/section-title.less";
+@import "blocks/section-description.less";
+@import "blocks/section-content.less";
+@import "blocks/service-info.less";
+@import "blocks/countries.less";
+@import "blocks/country-descrition.less";
+@import "blocks/show-button.less";
+@import "blocks/users.less";
+@import "blocks/user-card.less";
+@import "blocks/mark-level.less";
+@import "blocks/business-rates.less";
+@import "blocks/business-rates-modal.less";
+@import "blocks/address.less";
+@import "blocks/map.less";
+@import "blocks/feedback.less";
+@import "blocks/phone-block.less";
+@import "blocks/mail-block.less";
+@import "blocks/social-list.less";
+@import "blocks/modal-window.less";
+@import "blocks/mark-level-form.less";
+@import "blocks/profile-settings.less";
+@import "blocks/form-page-btn.less";
+@import "blocks/tags.less";
+@import "blocks/transport.less";
+@import "blocks/plans.less";
+@import "blocks/plans-card.less";
+@import "blocks/add-plans.less";
+@import "blocks/plans-step.less";
+@import "blocks/calendar.less";
+@import "blocks/countries-block.less";
+@import "blocks/letters-table.less";
+@import "blocks/countries-list.less";
+@import "blocks/action-plan.less";
+@import "blocks/wrapper.less";
+@import "blocks/global.less";
+@import "blocks/button.less";
