--- a/source/less/blocks/footer.less
+++ b/source/less/blocks/footer.less
@@ -6,8 +6,9 @@
   padding: 0;
   background-color: white;
   .border-radius-all(25px, 25px, 0, 0);
-  margin-top: -80px;
   padding-bottom: 19px;
+  z-index: @footer-form-z;
+  margin-top: -25px;
 }
 
 .footer__wrapper {
