--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -3,8 +3,12 @@
   width: @mobile-width;
   margin: 0;
   padding: 19px 25px 52px 25px;
-  background-color: @darker-blue;
+  background-color: @dark-blue;
   box-sizing: border-box;
+
+  &--bg-color {
+    background-color: @darker-blue;
+  }
 }
 
 .header__wrapper {
