--- a/source/less/blocks/plans-step.less
+++ b/source/less/blocks/plans-step.less
@@ -272,6 +272,7 @@
   font-weight: 500;
   line-height: 18px;
   color: @basic-blue-light;
+  text-transform: uppercase;
 
   &--full-width {
     width: 100%;
