--- a/source/less/blocks/countries.less
+++ b/source/less/blocks/countries.less
@@ -1,5 +1,7 @@
 .countries {
   position: relative;
+  display: flex;
+  flex-wrap: wrap;
   background-color: @basic-grey;
   margin-top: -35px;
   padding-bottom: 40px;
