--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -16,11 +16,13 @@
   border-bottom: 6px solid @special-orange;
   .border-radius-all(3px,3px,3px,3px);
   box-sizing: border-box;
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-size: 36px;
-  font-style: normal;
   font-weight: 700;
   line-height: 36px;
   text-align: left;
   color: @white;
+}
+
+.main__wrapper {
+  background-color: @basic-grey;
 }
