--- a/source/less/blocks/mark-level.less
+++ b/source/less/blocks/mark-level.less
@@ -2,4 +2,19 @@
   position: absolute;
   top: 19px;
   left: 19px;
+
+  &--catalog {
+    position: absolute;
+    top: 292px;
+    left: 205px;
+  }
+}
+
+.mark-level__progress-value {
+  position: absolute;
+  top: 13px;
+  left: 9px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 24px;
 }
