--- a/source/less/blocks/mixins.less
+++ b/source/less/blocks/mixins.less
@@ -65,3 +65,8 @@
   border-bottom-right-radius: @lb;
   border-bottom-left-radius: @rb;
 }
+
+.padding-margin-zero {
+  padding: 0;
+  margin: 0;
+}
