--- a/source/less/blocks/plans.less
+++ b/source/less/blocks/plans.less
@@ -2,7 +2,7 @@
   position: relative;
   z-index: @plans-z;
   .border-radius-all(30px, 30px, 0, 0);
-  margin-top: -25px;
+  margin-top: -28px;
   padding-top: 27px;
   padding-bottom: 54px;
   background-color: @grey-lighten;
@@ -10,4 +10,5 @@
 
 .plans__header {
   margin-bottom: 29px;
+  color: @basic-blue-light;
 }
