--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,22 +1,19 @@
 .promo {
   position: relative;
-  background: url("../img/traveller.png") top 129px center / 192px 255px no-repeat,
-    url("../img/promo-bg.jpg") top center / 320px 384px no-repeat,
-    url("../img/promo-bg-blue.png") top 384px center /320px 285px no-repeat,
-    url("../img/promo-bg-darkblue.png") top 669px center /320px 278px no-repeat;
+  background: url("../img/traveller.png") top 129px center / 192px 255px no-repeat, url("../img/promo-bg.jpg") top center / 320px 384px no-repeat, url("../img/promo-bg-blue.png") top 384px center /320px 285px no-repeat, url("../img/promo-bg-darkblue.png") top 669px center /320px 278px no-repeat;
   z-index: @promo-z;
 }
 
 .promo__header {
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
+  margin-top: 0;
   font-size: 36px;
-  font-style: normal;
   font-weight: 700;
   line-height: 40px;
   letter-spacing: 0;
   text-align: center;
   color: @white;
   margin-bottom: 243px;
+  box-sizing: border-box;
 }
 
 .promo__phone-icon {
@@ -36,8 +33,6 @@
 }
 
 .promo__quote {
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
-  font-style: normal;
   font-weight: 300;
   font-size: 16px;
   line-height: 22px;
@@ -48,8 +43,6 @@
 
 .promo__cite {
   display: block;
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 16px;
   line-height: 22px;
@@ -64,8 +57,6 @@
   flex-direction: column;
   flex-wrap: wrap;
   list-style-type: none;
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 18px;
@@ -111,8 +102,6 @@
 .promo__item-number {
   color: @white;
   padding-right: 21px;
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
-  font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 18px;
