--- a/source/less/blocks/users.less
+++ b/source/less/blocks/users.less
@@ -1,8 +1,6 @@
 .users {
   position: relative;
-  background: url("../img/users-block-bg.png") top 69px left / 113px 132px no-repeat,
-    url("../img/users-smolov-bg.png") top 69px right / 143px 143px no-repeat,
-    url("../img/users-rogovaya-bg.png") top 340px left / 64px 71px no-repeat;
+  background: url("../img/users-block-bg.png") top 69px left / 113px 132px no-repeat, url("../img/users-smolov-bg.png") top 69px right / 143px 143px no-repeat, url("../img/users-rogovaya-bg.png") top 340px left / 64px 71px no-repeat;
   background-color: @dark-blue;
   margin-top: -45px;
   padding-top: 65px;
