--- a/source/less/blocks/z-index.less
+++ b/source/less/blocks/z-index.less
@@ -1,6 +1,7 @@
 @map-z: 0;
 @footer-z: 1;
 @footer-form-z: 3;
+@footer-catalog-z: 4;
 @address-z: 1;
 @feedback-z: 2;
 @business-rates-z: 3;
@@ -12,6 +13,8 @@
 @business-rates-modal: 9;
 @main-nav-z: 10;
 @countries-block-z: 10;
+@country-filter-modal-z: 10;
 @profile-settings-z: 0;
+@transport-catalog-z: 1;
 @plans-z: 1;
 @add-plans: 2;
