--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,4 @@
+@import "blocks/page.less";
 @import "blocks/normalize.less";
 @import "blocks/fonts.less";
 @import "blocks/colors.less";
@@ -16,9 +17,12 @@
 @import "blocks/section-title.less";
 @import "blocks/section-description.less";
 @import "blocks/section-content.less";
+@import "blocks/swipe-points.less";
 @import "blocks/service-info.less";
 @import "blocks/countries.less";
 @import "blocks/country-descrition.less";
+@import "blocks/country-filter.less";
+@import "blocks/filter.less";
 @import "blocks/show-button.less";
 @import "blocks/users.less";
 @import "blocks/user-card.less";
@@ -49,3 +53,4 @@
 @import "blocks/wrapper.less";
 @import "blocks/global.less";
 @import "blocks/button.less";
+@import "blocks/pagination.less";
