--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -1,9 +1,12 @@
 .body {
   width: @mobile-width;
-  margin: 0 50px;
+  margin: 0 auto;
   background-color: @white;
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-weight: 300;
   font-size: 16px;
   line-height: 22px;
+
+  &--bg-color {
+    background-color: @basic-grey;
+  }
 }
