--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,3 +1,43 @@
 .button {
+  padding-top: 14px;
+  padding-bottom: 13px;
   border: none;
+  background-color: @orange-basic;
+  font-size: 17px;
+  font-weight: 700;
+  line-height: 17px;
+  text-align: center;
+  color: @blue-basic;
+  text-transform: uppercase;
+  .border-radius-all();
+  box-sizing: border-box;
+
+  &--turn-modal {
+    background-color: @grey-sepia;
+    padding-top: 13px;
+    padding-bottom: 10px;
+    padding-left: 30px;
+  }
+
+  &--oval {
+    width: 100%;
+    border-radius: 20px;
+    color: @darker-blue;
+    background-color: @white;
+  }
+
+  &--call {
+    width: 100%;
+    padding-bottom: 10px;
+    padding-left: 0;
+  }
+
+  &--show-more {
+    width: 100%;
+    background-color: transparent;
+    text-align: center;
+    margin-bottom: 19px;
+    padding: 0;
+    outline: none;
+  }
 }
