--- a/source/less/blocks/colors.less
+++ b/source/less/blocks/colors.less
@@ -7,7 +7,9 @@
 @orange-basic: #FFD74B;
 @special-yellow-dark: #FFBD30;
 @yellow: #FFA530;
+@yellow-dark:#F3C72B;
 @special-grey: #444444;
+@grey-sepia: #D6DAED;
 @grey-solid: #CBCED9;
 @grey-light: #E6E8F1;
 @basic-grey: #EDEFF6;
@@ -25,3 +27,5 @@
 @grey-darken: #D4D9EB;
 @grey-white: #CCCCCC;
 @red-light: #FF5C23;
+@shiny-blue: #E2E5F2;
+@special-blue-light: #DFE3F0;
