--- a/source/less/blocks/fonts.less
+++ b/source/less/blocks/fonts.less
@@ -2,7 +2,7 @@
   font-family: "Blogger Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/bloggersans.woff2") format("woff2"), url("../source/fonts/bloggersans.woff") format("woff");
+  src: url("../fonts/bloggersans.woff2") format("woff2"), url("../fonts/bloggersans.woff") format("woff");
   font-display: swap;
 }
 
@@ -10,7 +10,7 @@
   font-family: "Blogger Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/bloggersans-bold.woff2") format("woff2"), url("../source/fonts/bloggersans-bold.woff") format("woff");
+  src: url("../fonts/bloggersans-bold.woff2") format("woff2"), url("../fonts/bloggersans-bold.woff") format("woff");
   font-display: swap;
 }
 
@@ -18,6 +18,6 @@
   font-family: "Blogger Sans";
   font-style: normal;
   font-weight: 300;
-  src: url("../fonts/bloggersans-light.woff2") format("woff2"), url("../source/fonts/bloggersans-light.woff") format("woff");
+  src: url("../fonts/bloggersans-light.woff2") format("woff2"), url("../fonts/bloggersans-light.woff") format("woff");
   font-display: swap;
 }
