--- a/source/less/blocks/normalize.less
+++ b/source/less/blocks/normalize.less
@@ -31,6 +31,18 @@ main {
   display: block;
 }
 
+h1,
+h2,
+h3,
+h4,
+p,
+ul,
+blockquote,
+cite {
+  margin: 0;
+  padding: 0;
+}
+
 /**
  * Correct the font size and margin on `h1` elements within `section` and
  * `article` contexts in Chrome, Firefox, and Safari.
