--- a/source/less/blocks/service-info.less
+++ b/source/less/blocks/service-info.less
@@ -1,7 +1,6 @@
 .service-info {
   position: relative;
-  background: url("../img/about-service-bg2.png") top right / 292px 353px no-repeat,
-    url("../img/about-mobile-back.png") top left / 113px 132px no-repeat;
+  background: url("../img/about-service-bg2.png") top right / 292px 353px no-repeat, url("../img/about-mobile-back.png") top left / 113px 132px no-repeat;
   background-color: @blue-basic;
   z-index: @service-info;
   .border-radius-all(0, 0, 25px, 25px);
