--- a/source/less/blocks/transport.less
+++ b/source/less/blocks/transport.less
@@ -5,6 +5,10 @@
   box-sizing: border-box;
   border: 2px solid @grey-solid;
   text-align: center;
+
+  &--companion {
+    z-index: @transport-catalog-z;
+  }
 }
 
 .transport__header {
@@ -14,9 +18,7 @@
   padding-left: 15px;
   padding-right: 15px;
   background-color: @basic-grey;
-  font-family: "Blogger Sans", "Segoe UI", "Tahoma", "Geneva", "Verdana", sans-serif;
   font-size: 16px;
-  font-style: normal;
   font-weight: 700;
   line-height: 18px;
   text-align: center;
