--- a/source/less/blocks/var.less
+++ b/source/less/blocks/var.less
@@ -1,4 +1,6 @@
 @mobile-width: 320px;
+@tablet-width: 768px;
+@desktop-width: 1440px;
 @wrapper-width: 270px;
 @business-modal-height: 443px;
 @addrres-height: 238px;
