--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,11 +1,12 @@
 .promo {
   position: relative;
+  padding-top: 13px;
   background: url("../img/traveller.png") top 129px center / 192px 255px no-repeat, url("../img/promo-bg.jpg") top center / 320px 384px no-repeat, url("../img/promo-bg-blue.png") top 384px center /320px 285px no-repeat, url("../img/promo-bg-darkblue.png") top 669px center /320px 278px no-repeat;
   z-index: @promo-z;
 }
 
 .promo__header {
-  margin-top: 0;
+  margin: 0;
   font-size: 36px;
   font-weight: 700;
   line-height: 40px;
