--- a/source/less/blocks/service-info.less
+++ b/source/less/blocks/service-info.less
@@ -1,5 +1,6 @@
 .service-info {
   position: relative;
+  padding-bottom: 12px;
   background: url("../img/about-service-bg2.png") top right / 292px 353px no-repeat, url("../img/about-mobile-back.png") top left / 113px 132px no-repeat;
   background-color: @blue-basic;
   z-index: @service-info;
