--- a/source/less/blocks/hamburger-button.less
+++ b/source/less/blocks/hamburger-button.less
@@ -1,4 +1,64 @@
 .hamburger-button {
-  width: 0;
-  height: 0;
+  cursor: pointer;
+  position: relative;
+  width: 25px;
+  height: 12px;
+  background-color: transparent;
+  border: transparent;
+
+  &::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 2px;
+    width: 100%;
+    height: 3px;
+    border-radius: 2px;
+    background-color: @grey-white;
+  }
+
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 10px;
+    width: 100%;
+    height: 3px;
+    border-radius: 2px;
+    background-color: @grey-white;
+  }
+
+  &--opened-modal {
+    position: relative;
+    width: 25px;
+    height: 12px;
+
+    &::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 2px;
+      width: 100%;
+      height: 3px;
+      border-radius: 2px;
+      background-color: @grey-white;
+      transform: rotate(45deg);
+    }
+
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 2px;
+      width: 100%;
+      height: 3px;
+      border-radius: 2px;
+      background-color: @grey-white;
+      transform: rotate(-45deg);
+    }
+  }
+
+  &--closed-modal {
+    display: none;
+  }
 }
