--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,14 +2,18 @@
   width: @mobile-width;
   position: absolute;
   z-index: @main-nav-z;
-  top: 0;
+  top: 93px;
   left: 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 27px 25px 41px 25px;
+  padding: 24px 25px 50px 25px;
   box-sizing: border-box;
   background-color: @white;
+
+  &--closed-modal {
+    display: none;
+  }
 }
 
 .main-nav__list {
@@ -22,7 +26,6 @@
   text-transform: uppercase;
   list-style-type: none;
   margin-bottom: 51px;
-  margin-top: 66px;
 }
 
 .main-nav__contacts {
