--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,6 +2,7 @@
 @import "blocks/normalize.less";
 @import "blocks/fonts.less";
 @import "blocks/colors.less";
+@import "blocks/continents.less";
 @import "blocks/var.less";
 @import "blocks/mixins.less";
 @import "blocks/z-index.less";
@@ -54,3 +55,4 @@
 @import "blocks/global.less";
 @import "blocks/button.less";
 @import "blocks/pagination.less";
+@import "blocks/slider-block.less";
