--- a/source/less/blocks/body.less
+++ b/source/less/blocks/body.less
@@ -9,4 +9,8 @@
   &--bg-color {
     background-color: @basic-grey;
   }
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+  }
 }
