--- a/source/less/blocks/main.less
+++ b/source/less/blocks/main.less
@@ -1,6 +1,10 @@
 .main__title-block {
   padding-bottom: 4px;
   background-color: @orange-basic;
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+  }
 }
 
 .main__title-bg {
@@ -24,5 +28,6 @@
 }
 
 .main__wrapper {
+
   background-color: @basic-grey;
 }
