--- a/source/less/blocks/var.less
+++ b/source/less/blocks/var.less
@@ -2,6 +2,7 @@
 @tablet-width: 768px;
 @desktop-width: 1440px;
 @wrapper-width: 270px;
+@wrapper-tablet: 688px;
 @business-modal-height: 443px;
 @addrres-height: 238px;
 @footer-height: 239px;
