--- a/source/less/blocks/authorization-link.less
+++ b/source/less/blocks/authorization-link.less
@@ -17,5 +17,19 @@
     width: 190px;
     height: 40px;
     padding-top: 5px;
+
+    @media (min-width: @tablet-width) {
+      display: none;
+    }
+  }
+
+  &--big {
+    width: 188px;
+    height: 50px;
+    padding-top: 12px;
+
+    @media (max-width: @tablet-width) {
+      display: none;
+    }
   }
 }
