--- a/source/less/blocks/header.less
+++ b/source/less/blocks/header.less
@@ -1,21 +1,30 @@
 .header {
-  position: relative;
   width: @mobile-width;
-  margin: 0;
+  position: relative;
+  margin: 0 auto;
   padding: 29px 25px 52px 25px;
   background-color: @darker-blue;
   box-sizing: border-box;
 
-  @media (min-width: @tablet-width) {
-    background-color: @white;
-  }
-
-
   &--opened-modal {
     background-color: @white;
+
+    @media (min-width: @tablet-width) {
+      background-color: @white;
+    }
+  }
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
 
 .header__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
   align-items: center;
 }
+
