--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -14,6 +14,15 @@
   &--closed-modal {
     display: none;
   }
+
+  @media (min-width: @tablet-width) {
+    width: @tablet-width;
+    padding-left: 97px;
+    padding-top: 98px;
+    padding-bottom: 91px;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
 }
 
 .main-nav__list {
@@ -26,11 +35,25 @@
   text-transform: uppercase;
   list-style-type: none;
   margin-bottom: 51px;
+
+  @media (min-width: @tablet-width) {
+    text-align: left;
+    margin-bottom: 144px;
+    font-weight: 500;
+    font-size: 60px;
+    line-height: 71px;
+  }
 }
 
 .main-nav__contacts {
   margin-top: 51px;
   margin-bottom: 41px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 0;
+    text-align: left;
+    margin-bottom: 129px;
+  }
 }
 
 .main-nav__list-item-link {
